[gd_scene load_steps=2 format=3 uid="uid://baekmemqrbhs8"]

[ext_resource type="Script" uid="uid://b28ke4awxxdea" path="res://scenes/ui/uniform_vec_3_input.gd" id="1_d55xf"]

[node name="UniformVec3Input" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d55xf")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputX" type="LineEdit" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
alignment = 2

[node name="InputY" type="LineEdit" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
alignment = 2

[node name="InputZ" type="LineEdit" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
alignment = 2
